--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           Your browser does not support the video tag.
         </video>
         <div class="content">
-  
+          <!-- Your content goes here -->
           <div class="main-text">
             <h4>Save up to 60% off</h4>
             <h1>the natural <br> Food Stuff <span class="input"></span> </h1>
