--- a/index.html
+++ b/index.html
@@ -72,13 +72,13 @@
           Your browser does not support the video tag.
         </video>
         <div class="content">
-          
+          <!-- Your content goes here -->
           <div class="main-text">
             <h4>Save up to 60% off</h4>
             <h1>the natural <br> Food Stuff <span class="input"></span> </h1>
             <p>Start working with <span>Foods</span> that can provide every foodstuff that you need to create a happy and balanced life you dream of.</p>
 
-            <a href="#" class="btn">View Demos</a>
+            <a href="/shop.html" class="btn">View shop</a>
         </div>
         </div>
       
