--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <h3>Stay Connected</h3>
         <p>Check out our latest updates and news on social media:</p>
         <!-- Add your social media newsfeed code or embed here -->
-        <a class="twitter-timeline" href="https://twitter.com/MLildaps">Tweets by Me</a> 
+        <a class="twitter-timeline" href="https://twitter.com/TwitterDev">Tweets by Me</a> 
   <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
       </div>
