--- a/shop.html
+++ b/shop.html
@@ -83,8 +83,8 @@
                         <a href="shop.html">
                           <div class="featured-item">
                             <img src="assets/images/p1.jpg" alt="" width="150px;" height="150px;">
-                            <h4>Proin vel ligula</h4>
-                            <h6>$15.00</h6>
+                            <h4>Tomatoes</h4>
+                            <h6>15.00 cedis</h6>
                           </div>
                         </a>
                       </div>
@@ -92,8 +92,8 @@
                         <a href="shop.html">
                           <div class="featured-item">
                             <img src="assets/images/p2.jpg" alt="" width="150px;" height="150px;">
-                            <h4>Erat odio rhoncus</h4>
-                            <h6>$25.00</h6>
+                            <h4>Cabbage</h4>
+                            <h6>25.00 cedis</h6>
                           </div>
                         </a>
                       </div>
@@ -101,8 +101,8 @@
                         <a href="shop.html">
                           <div class="featured-item">
                             <img src="assets/images/p3.jpg" alt="" width="150px;" height="150px;">
-                            <h4>Integer vel turpis</h4>
-                            <h6>$35.00</h6>
+                            <h4>Pepper</h4>
+                            <h6>15.00 cedis</h6>
                           </div>
                         </a>
                       </div>
@@ -112,8 +112,8 @@
                         <a href="shop.html">
                           <div class="featured-item">
                             <img src="assets/images/p4.jpg" alt="" width="150px;" height="150px;">
-                            <h4>Sed purus quam</h4>
-                            <h6>$45.00</h6>
+                            <h4>Maize</h4>
+                            <h6>5.00 cedis</h6>
                           </div>
                         </a>
                       </div>
@@ -121,8 +121,8 @@
                         <a href="shop.html">
                           <div class="featured-item">
                             <img src="assets/images/p5.jpg" alt="" width="150px;" height="150px;">
-                            <h4>Morbi aliquet</h4>
-                            <h6>$55.00</h6>
+                            <h4>Carrot</h4>
+                            <h6>15.00 cedis</h6>
                           </div>
                         </a>
                       </div>
@@ -130,8 +130,8 @@
                         <a href="shop.html">
                           <div class="featured-item">
                             <img src="assets/images/p6.jpg" alt="" width="150px;" height="150px;">
-                            <h4>Urna ac diam</h4>
-                            <h6>$65.00</h6>
+                            <h4>Spinach</h4>
+                            <h6>65.00 cedis</h6>
                           </div>
                         </a>
                       </div>
@@ -141,8 +141,8 @@
                         <a href="shop.html">
                           <div class="featured-item">
                             <img src="assets/images/p3.jpg" alt="" width="150px;" height="150px;">
-                            <h4>Proin eget imperdiet</h4>
-                            <h6>$75.00</h6>
+                            <h4>Pepper</h4>
+                            <h6>15.00 cedis</h6>
                           </div>
                         </a>
                       </div>
@@ -150,8 +150,8 @@
                         <a href="shop.html">
                           <div class="featured-item">
                             <img src="assets/images/p2.jpg" alt="" width="150px;" height="150px;">
-                            <h4>Nullam risus nisl</h4>
-                            <h6>$85.00</h6>
+                            <h4>Cabbage</h4>
+                            <h6>25.00 cedis</h6>
                           </div>
                         </a>
                       </div>
@@ -159,8 +159,8 @@
                         <a href="shop.html">
                           <div class="featured-item">
                             <img src="assets/images/p1.jpg" alt="" width="150px;" height="150px;">
-                            <h4>Cras tempus</h4>
-                            <h6>$95.00</h6>
+                            <h4>Tomatoes</h4>
+                            <h6>15.00 cedis</h6>
                           </div>
                         </a>
                       </div>
