--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ecommerce Website</title>
+    <title>GigFarm</title>
     <link rel="stylesheet" href="/assets/style.css">
     <link rel="stylesheet" 
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -76,9 +76,9 @@
           <div class="main-text">
             <h4>Save up to 60% off</h4>
             <h1>the natural <br> Food Stuff <span class="input"></span> </h1>
-            <p>Start working with <span>Foods</span> that can provide every foodstuff that you need to create a happy and balanced life you dream of.</p>
+            <p>Start working with <span>GigFarm</span> that can provide every foodstuff that you need to create a happy and balanced life you dream of.</p>
 
-            <a href="/shop.html" class="btn">View shop</a>
+            <a href="/shop.html" class="btn">GigFarm shop</a>
         </div>
         </div>
       
