--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
             <li><a href="/about.html">About</a></li>
 
         </ul>
-        <a href="#" class="btn">contact us</a>
+        <a href="https://gmail.com" class="btn">contact us</a>
     </header>
 
     <!-- main-section -->
